--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "illuminate/container": "^8.0",
-        "illuminate/contracts": "^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/events": "^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/pagination": "^8.0",
+        "php": ">=8.0",
+        "illuminate/container": "^v10.0.3",
+        "illuminate/contracts": "^v10.0.3",
+        "illuminate/database": "^v10.0.3",
+        "illuminate/events": "^v10.0.3",
+        "illuminate/support": "^v10.0.3",
+        "illuminate/pagination": "^v10.0.0",
         "nesbot/carbon": "^2.0",
         "laudis/neo4j-php-client": "^2.3.3"
     },
