chore(composer.json): update package name from "vinelab/neoeloquent" to "duvalg/neoeloquent" to reflect ownership change chore(composer.json): update namespace from "Vinelab\\NeoEloquent" to "duvalg\\NeoEloquent" to reflect ownership change chore(composer.json): update test namespace from "Vinelab\\NeoEloquent\\Tests" to "duvalg\\NeoEloquent\\Tests" to reflect ownership change chore(composer.json): update provider namespace from "Vinelab\\NeoEloquent\\NeoEloquentServiceProvider" to "Duvalg\\NeoEloquent\\NeoEloquentServiceProvider" to reflect ownership change

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vinelab/neoeloquent",
+    "name": "duvalg/neoeloquent",
     "description": "Laravel wrapper for the Neo4j graph database REST interface",
     "keywords": [
         "neo4j",
@@ -39,19 +39,19 @@
     },
     "autoload": {
         "psr-4": {
-            "Vinelab\\NeoEloquent\\": "src/"
+            "duvalg\\NeoEloquent\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Vinelab\\NeoEloquent\\Tests\\": "tests/"
+            "duvalg\\NeoEloquent\\Tests\\": "tests/"
         }
     },
     "minimum-stability": "stable",
     "extra": {
         "laravel": {
             "providers": [
-                "Vinelab\\NeoEloquent\\NeoEloquentServiceProvider"
+                "Duvalg\\NeoEloquent\\NeoEloquentServiceProvider"
             ]
         }
     }
